<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="187dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome"
        android:textColor="#542804"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="-9dp"
        android:layout_marginEnd="206dp"
        android:layout_marginRight="206dp"
        android:fontFamily="@font/poppins"
        android:text="@string/log_in_to_continue"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/editTextMobileNumber"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="12"
        android:fontFamily="@font/poppins"
        android:hint="@string/mobile_number"
        android:textSize="12sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextMobileNumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:background="@drawable/btn_submit"
        android:fontFamily="@font/poppins_medium"
        android:text="CONTINUE"
        android:textColor="#000000"
        android:textSize="14sp"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        android:elevation="15dp"
        app:strokeColor="#BE723E" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:fontFamily="@font/poppins"
        android:text="Don't have an account yet?"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/signUpClickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/sign_up"
        android:textColor="#2196F3"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="178dp"
        android:layout_marginRight="178dp"
        android:layout_marginBottom="51dp"
        android:contentDescription="TODO"
        android:maxWidth="52dp"
        android:minWidth="52dp"
        app:srcCompat="@drawable/beneco_logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/in_partnership_with_beneco_inc"
        android:textColor="#000000"
        android:textSize="12sp" />

</RelativeLayout>
